--- a/public/output.css
+++ b/public/output.css
@@ -524,6 +524,28 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.container{
+  width: 100%;
+}
+
+@media (min-width: 480px){
+  .container{
+    max-width: 480px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1060px){
+  .container{
+    max-width: 1060px;
+  }
+}
+
 .visible{
   visibility: visible;
 }
@@ -594,6 +616,10 @@ video {
   margin-bottom: 2.5rem;
 }
 
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
 .mb-5{
   margin-bottom: 1.25rem;
 }
@@ -634,6 +660,10 @@ video {
   margin-top: 1.25rem;
 }
 
+.mt-7{
+  margin-top: 1.75rem;
+}
+
 .flex{
   display: flex;
 }
@@ -660,6 +690,10 @@ video {
 
 .h-full{
   height: 100%;
+}
+
+.max-h-\[400px\]{
+  max-height: 400px;
 }
 
 .w-1\/2{
@@ -770,6 +804,11 @@ video {
   background-color: rgb(1 0 38 / var(--tw-bg-opacity));
 }
 
+.bg-grey{
+  --tw-bg-opacity: 1;
+  background-color: rgb(237 237 237 / var(--tw-bg-opacity));
+}
+
 .bg-red{
   --tw-bg-opacity: 1;
   background-color: rgb(220 68 146 / var(--tw-bg-opacity));
@@ -784,8 +823,16 @@ video {
   background-image: linear-gradient(90deg, #24CBFF 14.53%, #FC59FF 69.36%, #FFBD0C 117.73%);
 }
 
+.p-10{
+  padding: 2.5rem;
+}
+
 .p-12{
   padding: 3rem;
+}
+
+.p-16{
+  padding: 4rem;
 }
 
 .p-2{
@@ -831,6 +878,10 @@ video {
   padding-bottom: 6rem;
 }
 
+.pb-48{
+  padding-bottom: 12rem;
+}
+
 .pr-0{
   padding-right: 0px;
 }
@@ -841,6 +892,10 @@ video {
 
 .pt-10{
   padding-top: 2.5rem;
+}
+
+.pt-48{
+  padding-top: 12rem;
 }
 
 .text-center{
@@ -906,6 +961,10 @@ video {
 .text-yellow{
   --tw-text-opacity: 1;
   color: rgb(253 204 73 / var(--tw-text-opacity));
+}
+
+.opacity-0{
+  opacity: 0;
 }
 
 .transition{
@@ -1057,6 +1116,10 @@ body,
   opacity: 0.5;
 }
 
+.hover\:opacity-90:hover{
+  opacity: 0.9;
+}
+
 .hover\:saturate-200:hover{
   --tw-saturate: saturate(2);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1081,8 +1144,18 @@ body,
   }
 
   .xs\:before\:content-brush::before{
-    --tw-content: url('./src/assets/brush.png');
+    --tw-content: url('./assets/brush.png');
     content: var(--tw-content);
+  }
+}
+
+@media (min-width: 768px){
+  .sm\:grid{
+    display: grid;
+  }
+
+  .sm\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
 
@@ -1109,6 +1182,10 @@ body,
 
   .md\:w-1\/3{
     width: 33.333333%;
+  }
+
+  .md\:w-2\/4{
+    width: 50%;
   }
 
   .md\:w-3\/4{
