--- a/public/output.css
+++ b/public/output.css
@@ -692,6 +692,14 @@ video {
   height: 100%;
 }
 
+.h-\[\]{
+  height: ;
+}
+
+.h-\[75vh\]{
+  height: 75vh;
+}
+
 .max-h-\[400px\]{
   max-height: 400px;
 }
@@ -720,8 +728,28 @@ video {
   width: 100%;
 }
 
+.w-\[\]{
+  width: ;
+}
+
+.w-\[75vw\]{
+  width: 75vw;
+}
+
+.w-3\/4{
+  width: 75%;
+}
+
+.w-2\/4{
+  width: 50%;
+}
+
 .max-w-\[400px\]{
   max-width: 400px;
+}
+
+.max-w-\[200px\]{
+  max-width: 200px;
 }
 
 .basis-2\/5{
@@ -1178,6 +1206,24 @@ body,
 
   .md\:h-full{
     height: 100%;
+  }
+
+  .md\:h-48{
+    height: 12rem;
+  }
+
+  .md\:min-h-min{
+    min-height: -moz-min-content;
+    min-height: min-content;
+  }
+
+  .md\:min-h-fit{
+    min-height: -moz-fit-content;
+    min-height: fit-content;
+  }
+
+  .md\:min-h-0{
+    min-height: 0px;
   }
 
   .md\:w-1\/3{
