--- a/public/output.css
+++ b/public/output.css
@@ -656,6 +656,10 @@ video {
   margin-top: 8rem;
 }
 
+.mt-48{
+  margin-top: 12rem;
+}
+
 .mt-5{
   margin-top: 1.25rem;
 }
@@ -688,16 +692,12 @@ video {
   height: 8rem;
 }
 
+.h-\[350px\]{
+  height: 350px;
+}
+
 .h-full{
   height: 100%;
-}
-
-.h-\[\]{
-  height: ;
-}
-
-.h-\[75vh\]{
-  height: 75vh;
 }
 
 .max-h-\[400px\]{
@@ -710,6 +710,10 @@ video {
 
 .w-1\/3{
   width: 33.333333%;
+}
+
+.w-2\/4{
+  width: 50%;
 }
 
 .w-3{
@@ -728,28 +732,12 @@ video {
   width: 100%;
 }
 
-.w-\[\]{
-  width: ;
-}
-
-.w-\[75vw\]{
-  width: 75vw;
-}
-
-.w-3\/4{
-  width: 75%;
-}
-
-.w-2\/4{
-  width: 50%;
+.max-w-\[200px\]{
+  max-width: 200px;
 }
 
 .max-w-\[400px\]{
   max-width: 400px;
-}
-
-.max-w-\[200px\]{
-  max-width: 200px;
 }
 
 .basis-2\/5{
@@ -802,6 +790,10 @@ video {
 
 .gap-7{
   gap: 1.75rem;
+}
+
+.gap-8{
+  gap: 2rem;
 }
 
 .rounded-full{
@@ -902,6 +894,10 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.pb-16{
+  padding-bottom: 4rem;
+}
+
 .pb-24{
   padding-bottom: 6rem;
 }
@@ -920,6 +916,10 @@ video {
 
 .pt-10{
   padding-top: 2.5rem;
+}
+
+.pt-32{
+  padding-top: 8rem;
 }
 
 .pt-48{
@@ -966,6 +966,11 @@ video {
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold{
@@ -1052,9 +1057,19 @@ body,
   top: -70px;
 }
 
+.before\:left-1\/2::before{
+  content: var(--tw-content);
+  left: 50%;
+}
+
 .before\:left-\[-50\%\]::before{
   content: var(--tw-content);
   left: -50%;
+}
+
+.before\:top-\[-120px\]::before{
+  content: var(--tw-content);
+  top: -120px;
 }
 
 .before\:top-\[-50\%\]::before{
@@ -1065,6 +1080,11 @@ body,
 .before\:z-\[-1\]::before{
   content: var(--tw-content);
   z-index: -1;
+}
+
+.before\:-ml-\[110px\]::before{
+  content: var(--tw-content);
+  margin-left: -110px;
 }
 
 .before\:h-6::before{
@@ -1118,6 +1138,21 @@ body,
   content: var(--tw-content);
   --tw-border-opacity: 1;
   border-color: rgb(253 204 73 / var(--tw-border-opacity));
+}
+
+.before\:content-person1::before{
+  --tw-content: url('./assets/person-1.png');
+  content: var(--tw-content);
+}
+
+.before\:content-person2::before{
+  --tw-content: url('./assets/person-2.png');
+  content: var(--tw-content);
+}
+
+.before\:content-person3::before{
+  --tw-content: url('./assets/person-3.png');
+  content: var(--tw-content);
 }
 
 .hover\:bg-blue:hover{
@@ -1208,20 +1243,6 @@ body,
     height: 100%;
   }
 
-  .md\:h-48{
-    height: 12rem;
-  }
-
-  .md\:min-h-min{
-    min-height: -moz-min-content;
-    min-height: min-content;
-  }
-
-  .md\:min-h-fit{
-    min-height: -moz-fit-content;
-    min-height: fit-content;
-  }
-
   .md\:min-h-0{
     min-height: 0px;
   }
@@ -1256,6 +1277,10 @@ body,
 
   .md\:gap-16{
     gap: 4rem;
+  }
+
+  .md\:text-left{
+    text-align: left;
   }
 
   .md\:text-start{
